<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        android:contentDescription="Home tab" />
    <item
        android:id="@+id/nav_cart"
        android:icon="@drawable/ic_cart"
        android:title="@string/cart"
        android:contentDescription="Cart tab" />
    <item
        android:id="@+id/nav_orders"
        android:icon="@drawable/ic_orders"
        android:title="@string/orders"
        android:contentDescription="Orders tab" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"
        android:contentDescription="Profile tab" />
</menu>
